--- a/app/views/docs/getting-started-for-ios.phtml
+++ b/app/views/docs/getting-started-for-ios.phtml
@@ -39,14 +39,13 @@ $appleVersion = (isset($versions['apple'])) ? $versions['apple'] : '';
     <li>Make sure `Appwrite` is selected to add to your target and select finish</li>
 </ul>
 
-
 <h3>Using Swift Packages</h3>
 
 <p>Add this to your Package.swift file: </p>
 
 <div class="ide" data-lang="swift" data-lang-label="Swift">
   <pre class="line-numbers"><code class="prism language-swift" data-prism><?php echo $this->escape('dependencies: [
-    .package(url: "https://github.com/appwrite/sdk-for-apple", from: "0.1.0"),
+    .package(url: "https://github.com/appwrite/sdk-for-apple", from: "0.0.1"),
 ]');?></code></pre>
 </div>
 
@@ -123,8 +122,12 @@ let client = Client()
 <div class="ide" data-lang="apple" data-lang-label="Swift">
                     <pre class="line-numbers"><code class="prism language-swift" data-prism>// Register User
 let account = Account(client: client)
-let response = account.create(email: "email@example.com", password: "password")
-let json = response.body!.readString(length: response.body!.readableBytes)</code></pre>
+account.create(email: "email@example.com", password: "password") { result in
+    switch result {
+    case .failure(let error): print(error.message)
+    case .success(let user): print(String(describing: user))
+    }
+}</code></pre>
 </div>
 
 <h2><a href="/docs/getting-started-for-apple#listenToChanges" id="listenToChanges">Listen to changes</a></h2>
@@ -135,13 +138,12 @@ let json = response.body!.readString(length: response.body!.readableBytes)</code
   <pre class="line-numbers"><code class="prism language-kotlin" data-prism>// Subscribe to files channel
 let realtime = Realtime(client: client)
 
-realtime.subscribe(["files"]) { response in
-    if(response.event === 'storage.files.create') {
+let subscription = realtime.subscribe(channels: ["files"]) { message in
+    if(message.event == "storage.files.create") {
         // Log when a new file is uploaded
-        print(response.payload.toString());
+        print(String(describing: message.payload));
     }
-})
-</code></pre>
+}</code></pre>
 </div>
 
 <h2><a href="/docs/getting-started-for-apple#fullExample" id="fullExample">Full Example</a></h2>
@@ -156,18 +158,22 @@ let client = Client()
 
 // Register User
 let account = Account(client: client)
-let response = account.create(email: "email@example.com", password: "password")
-let json = response.body!.readString(length: response.body!.readableBytes)
+account.create(email: "email@example.com", password: "password") { result in
+    switch result {
+    case .failure(let error): print(error.message)
+    case .success(let user): print(String(describing: user))
+    }
+}
 
 // Subscribe to files channel
 let realtime = Realtime(client: client)
 
-realtime.subscribe(["files"]){ response in
-    if(response.event === 'storage.files.create') {
+let subscription = realtime.subscribe(channels: ["files"]) { message in
+    if(message.event == "storage.files.create") {
         // Log when a new file is uploaded
-        print(String(describing: response.payload));
+        print(String(describing: message.payload));
     }
-})</code></pre>
+}</code></pre>
 </div>
 
 <h2><a href="/docs/getting-started-for-apple#nextSteps" id="nextSteps">Next Steps</a></h2>
