--- a/app/views/docs/getting-started-for-macos.phtml
+++ b/app/views/docs/getting-started-for-macos.phtml
@@ -17,17 +17,17 @@ $appleVersion = (isset($versions['apple'])) ? $versions['apple'] : '';
 
 <p>This tutorial will help you start using Appwrite products and build your next project. Before starting, make sure you have followed the Appwrite <a href="/docs/installation">installation guide</a>, and you have an Appwrite server instance up and running on your host machine or server.</p>
 
-<h2><a href="/docs/getting-started-for-apple#createYourProject" id="createYourProject">Create Your First Appwrite Project</a></h2>
+<h2><a href="/docs/getting-started-for-macos#createYourProject" id="createYourProject">Create Your First Appwrite Project</a></h2>
 
 <p>Go to your new Appwrite console, and once inside, click the <i class="icon-plus"></i> icon in the top navigation header or on the <b>'Create Project'</b> button on your console homepage. Choose a name for your project and click create to get started.</p>
 
-<h2><a href="/docs/getting-started-for-apple#addProject" id="addProject">Add your Apple Platform</a></h2>
+<h2><a href="/docs/getting-started-for-macos#addProject" id="addProject">Add your Apple Platform</a></h2>
 
 <p>To init your SDK and start interacting with Appwrite services, you need to add a new macOS platform to your project. To add a new platform, go to your Appwrite console, choose the project you created in the step before, and click the 'Add Platform' button.</p>
 
 <p>From the options, choose to add a new <b>macOS</b> platform and add add your app <u>name</u> and <u>bundle identifier</u>, Your bundle identifier can be found at the top of the `General` tab in your project settings, or in your `Info.plist` file. By registering your new app platform, you are allowing your app to communicate with the Appwrite API.</p>
 
-<h2><a href="/docs/getting-started-for-apple#getSDK" id="getSDK">Get Appwrite Apple SDK</a></h2>
+<h2><a href="/docs/getting-started-for-macos#getSDK" id="getSDK">Get Appwrite Apple SDK</a></h2>
 
 <h3>Using Xcode</h3>
 
@@ -63,7 +63,7 @@ $appleVersion = (isset($versions['apple'])) ? $versions['apple'] : '';
 ]');?></code></pre>
 </div>
 
-<h3><a href="/docs/getting-started-for-apple#OAuthCallback" id="OAuthCallback">OAuth Callback</a></h3>
+<h3><a href="/docs/getting-started-for-macos#OAuthCallback" id="OAuthCallback">OAuth Callback</a></h3>
 
 <p>In order to capture the Appwrite OAuth callback url, the following URL scheme needs to added to your `Info.plist`</p>
 
@@ -99,7 +99,7 @@ $appleVersion = (isset($versions['apple'])) ? $versions['apple'] : '';
 ]');?></code></pre>
 </div>
 
-<h2><a href="/docs/getting-started-for-apple#initSDK" id="initSDK">Init your SDK</a></h2>
+<h2><a href="/docs/getting-started-for-macos#initSDK" id="initSDK">Init your SDK</a></h2>
 
 <p>Initialize your SDK code with your project ID, which can be found in your project settings page.</p>
 
@@ -116,18 +116,23 @@ let client = Client()
 
 <p>When trying to connect to Appwrite from a physical device, localhost is the hostname for the device and not your local Appwrite instance. You should replace localhost with your private IP as the Appwrite endpoint's hostname. You can also use a service like <a href="https://ngrok.com/" target="_blank" rel="noopener">ngrok</a> to proxy the Appwrite API.</p>
 
-<h2><a href="/docs/getting-started-for-apple#makeRequest" id="makeRequest">Make Your First Request</a></h2>
+<h2><a href="/docs/getting-started-for-macos#makeRequest" id="makeRequest">Make Your First Request</a></h2>
 
 <p>Once your SDK object is set, access any of the Appwrite services and choose any request to send. Full documentation for any service method you would like to use can be found in your SDK documentation or in the API References section.</p>
 
 <div class="ide" data-lang="apple" data-lang-label="Swift">
                     <pre class="line-numbers"><code class="prism language-swift" data-prism>// Register User
 let account = Account(client: client)
-let response = account.create(email: "email@example.com", password: "password")
-let json = response.body!.readString(length: response.body!.readableBytes)</code></pre>
+
+account.create(email: "email@example.com", password: "password") { result in
+    switch result {
+    case .failure(let error): print(error.message)
+    case .success(let user): print(String(describing: user))
+    }
+}</code></pre>
 </div>
 
-<h2><a href="/docs/getting-started-for-apple#listenToChanges" id="listenToChanges">Listen to changes</a></h2>
+<h2><a href="/docs/getting-started-for-macos#listenToChanges" id="listenToChanges">Listen to changes</a></h2>
 
 <p>If you want to listen to changes in realtime from Appwrite, you can subscribe to a variety of channels and receive updates within milliseconds. Full documentation for Realtime can be found <a href="/docs/realtime">here</a>.</p>
 
@@ -135,16 +140,16 @@ let json = response.body!.readString(length: response.body!.readableBytes)</code
   <pre class="line-numbers"><code class="prism language-kotlin" data-prism>// Subscribe to files channel
 let realtime = Realtime(client: client)
 
-realtime.subscribe(["files"]) { response in
-    if(response.event === 'storage.files.create') {
+let subscription = realtime.subscribe(channels: ["files"]) { message in
+    if(message.event == "storage.files.create") {
         // Log when a new file is uploaded
-        print(response.payload.toString());
+        print(String(describing: message.payload));
     }
-})
+}
 </code></pre>
 </div>
 
-<h2><a href="/docs/getting-started-for-apple#fullExample" id="fullExample">Full Example</a></h2>
+<h2><a href="/docs/getting-started-for-macos#fullExample" id="fullExample">Full Example</a></h2>
 <div class="ide" data-lang="apple" data-lang-label="Swift">
                     <pre class="line-numbers"><code class="prism language-swift" data-prism>import io.appwrite.Client
 import Appwrite
@@ -156,20 +161,25 @@ let client = Client()
 
 // Register User
 let account = Account(client: client)
-let response = account.create(email: "email@example.com", password: "password")
-let json = response.body!.readString(length: response.body!.readableBytes)
+
+account.create(email: "email@example.com", password: "password") { result in
+    switch result {
+    case .failure(let error): print(error.message)
+    case .success(let user): print(String(describing: user))
+    }
+}
 
 // Subscribe to files channel
 let realtime = Realtime(client: client)
 
-realtime.subscribe(["files"]){ response in
-    if(response.event === 'storage.files.create') {
+let subscription = realtime.subscribe(channels: ["files"]) { message in
+    if(message.event == "storage.files.create") {
         // Log when a new file is uploaded
-        print(String(describing: response.payload));
+        print(String(describing: message.payload));
     }
-})</code></pre>
+}</code></pre>
 </div>
 
-<h2><a href="/docs/getting-started-for-apple#nextSteps" id="nextSteps">Next Steps</a></h2>
+<h2><a href="/docs/getting-started-for-macos#nextSteps" id="nextSteps">Next Steps</a></h2>
 
 <p>Appwrite has many services and tools to help improve your app and speed up your development. The best way to learn how you can take advantage of them is to explore the different API references docs.</p>
