--- a/app/views/docs/getting-started-for-macos.phtml
+++ b/app/views/docs/getting-started-for-macos.phtml
@@ -45,9 +45,9 @@ $appleVersion = (isset($versions['apple'])) ? $versions['apple'] : '';
 <p>Add this to your Package.swift file: </p>
 
 <div class="ide" data-lang="swift" data-lang-label="Swift">
-  <pre class="line-numbers"><code class="prism language-swift" data-prism><?php echo $this->escape('dependencies: [
-    .package(url: "https://github.com/appwrite/sdk-for-apple", from: "0.1.0"),
-]');?></code></pre>
+  <pre class="line-numbers"><code class="prism language-swift" data-prism>'dependencies: [
+    .package(url: "https://github.com/appwrite/sdk-for-apple", from: "<?php echo $this->escape($appleVersion); ?>"),
+]')'</code></pre>
 </div>
 
 <p>Then add the dependency to your target:</p>
