--- a/app/views/docs/getting-started-for-apple.phtml
+++ b/app/views/docs/getting-started-for-apple.phtml
@@ -31,13 +31,13 @@ $appleVersion = (isset($versions['swift-client'])) ? $versions['swift-client'] :
 
 <h3>Using Xcode</h3>
 
-<ul>
+<ol>
     <li>Select File > Swift Packages > Add Package Dependency</li>
     <li>Search for the Appwrite SDK with the URL https://github.com/appwrite/sdk-for-apple</li>
     <li>Add version rules</li>
     <li>Select next and wait for package resolution to complete</li>
     <li>Make sure `Appwrite` is selected to add to your target and select finish</li>
-</ul>
+</ol>
 
 <h3>Using Swift Packages</h3>
 
@@ -67,8 +67,7 @@ $appleVersion = (isset($versions['swift-client'])) ? $versions['swift-client'] :
 <p>In order to capture the Appwrite OAuth callback url, the following URL scheme needs to added to your `Info.plist`</p>
 
 <div class="ide" data-lang="html" data-lang-label="XML">
-    <pre class="line-numbers"><code class="prism language-xml" data-prism><?php echo $this->escape('
-<key>CFBundleURLTypes</key>
+    <pre class="line-numbers"><code class="prism language-xml" data-prism><?php echo $this->escape('<key>CFBundleURLTypes</key>
 <array>
 <dict>
     <key>CFBundleTypeRole</key>
