--- a/app/views/docs/getting-started-for-flutter.phtml
+++ b/app/views/docs/getting-started-for-flutter.phtml
@@ -144,7 +144,7 @@ Response user = await account
 </code></pre>
 </div>
 
-<h2><a href="/docs/getting-started-for-flutter#listenToChanges" id="listenToChanges">Listen to changes</a></h2>
+<h2><a href="/docs/getting-started-for-flutter#listenToChanges" id="listenToChanges">Listen to Changes</a></h2>
 
 <p>If you want to listen to changes in realtime from Appwrite, you can subscribe to a variety of channels and receive updates within milliseconds. Full documentation for Realtime can be found <a href="/docs/realtime">here</a>.</p>
 
