Updated platforms list

--- a/app/views/docs/main.phtml
+++ b/app/views/docs/main.phtml
@@ -3,7 +3,7 @@
 $clients = [
     [
         'title' => 'Getting Started for Web',
-        'description' => 'Integrate Appwrite with your website.',
+        'description' => 'Integrate Appwrite with your Web apps.',
         'logo' => '/images/clients/web.png',
         'link' => '/docs/getting-started-for-web',
     ],
@@ -13,15 +13,15 @@ $clients = [
         'logo' => '/images/clients/flutter.png',
         'link' => '/docs/getting-started-for-flutter',
     ],
-    /*[
-        'title' => 'iOS',
-        'description' => 'Integrate Appwrite with your iOS app.',
-        'logo' => '/images/clients/ios.png',
-        'link' => '/docs/getting-started-for-ios',
-    ],*/
+    [
+        'title' => 'Apple',
+        'description' => 'Integrate Appwrite with your Apple apps.',
+        'logo' => '/images/clients/apple.png',
+        'link' => '/docs/getting-started-for-apple',
+    ],
     [
         'title' => 'Android',
-        'description' => 'Integrate Appwrite with your Android app.',
+        'description' => 'Integrate Appwrite with your Android apps.',
         'logo' => '/images/clients/android.png',
         'link' => '/docs/getting-started-for-android',
     ],
