--- a/app/views/docs/main.phtml
+++ b/app/views/docs/main.phtml
@@ -14,13 +14,13 @@ $clients = [
         'link' => '/docs/getting-started-for-flutter',
     ],
     [
-        'title' => 'Apple',
+        'title' => 'Getting Started for Apple',
         'description' => 'Integrate Appwrite with your Apple apps.',
         'logo' => '/images/clients/apple.png',
         'link' => '/docs/getting-started-for-apple',
     ],
     [
-        'title' => 'Android',
+        'title' => 'Getting Started for Android',
         'description' => 'Integrate Appwrite with your Android apps.',
         'logo' => '/images/clients/android.png',
         'link' => '/docs/getting-started-for-android',
