--- a/app/views/docs/main.phtml
+++ b/app/views/docs/main.phtml
@@ -59,7 +59,7 @@ $clients = [
 
     <p>Appwrite is both cross-platform and technology agnostic, meaning it can run on any operating system, coding language, framework, or platform. Although Appwrite can easily fit the definition of a serverless technology, it's designed to run well in multiple configurations. You can integrate Appwrite directly with your client app, use it behind your custom backend or alongside your custom backend server.</p>
 
-    <h2 class="margin-bottom">Getting Started Tutorials</h2>
+    <h2 class="margin-bottom">Quickstart Tutorials</h2>
 
     <div class="row responsive">
         <?php foreach ($clients as $i => $client): ?>
