Fix unclosed tags

--- a/app/views/docs/getting-started-for-android.phtml
+++ b/app/views/docs/getting-started-for-android.phtml
@@ -62,6 +62,7 @@ $androidVersion = (isset($versions['android'])) ? $versions['android'] : '';
     </activity>
   </application>
 </manifest>'); ?>
+</code></pre>
 </div>
 
 <h2><a href="/docs/getting-started-for-android#initSDK" id="initSDK">Init your SDK</a></h2>
