Add missing closing tags around code block

--- a/app/views/docs/getting-started-for-android.phtml
+++ b/app/views/docs/getting-started-for-android.phtml
@@ -61,7 +61,7 @@ $androidVersion = (isset($versions['android'])) ? $versions['android'] : '';
       </intent-filter>
     </activity>
   </application>
-</manifest>'); ?>
+</manifest>'); ?></code></pre>
 </div>
 
 <h2><a href="/docs/getting-started-for-android#initSDK" id="initSDK">Init your SDK</a></h2>
