Added error code 511

--- a/app/views/docs/error-codes.phtml
+++ b/app/views/docs/error-codes.phtml
@@ -93,6 +93,12 @@
             <td data-title="Description: ">The Appwrite servers are up, but the request couldn’t be serviced due to some failure within the stack. Try again later.</td>
         </tr>
 
+        <tr>
+            <td data-title="Code: ">511</td>
+            <td data-title="Text: ">Network Authentication Required</td>
+            <td data-title="Description: ">Indicates that the client needs to authenticate to gain network access.</td>
+        </tr>
+
     </tbody>
 </table>
 
