Fix: improper page attributes and parameters

--- a/app/views/docs/rules.phtml
+++ b/app/views/docs/rules.phtml
@@ -5,7 +5,7 @@ $markdown->setSafeMode(true);
 
 <p>Rules are the building blocks of Appwrite Database collections. Using rules and their validators you are able to structure your project data and make sure you only get the data in the formats you expect to.</p>
 
-<h2><a href="/docs/rules#ruleOjbect" id="ruleObject">Rule Object</a></h2>
+<h2><a href="/docs/rules#ruleObject" id="ruleObject">Rule Object</a></h2>
 
 <?php
     $parameters = [
