Fix: update Client instantiations and resolve typos

--- a/app/views/docs/security.phtml
+++ b/app/views/docs/security.phtml
@@ -4,7 +4,7 @@
 
 <h2>SSL Certificates</h2>
 
-<p>Appwrite uses <a href="https://github.com/traefik/traefik" target="_blank" rel="noopener">Traefik</a> and <a href="https://letsencrypt.org/" target="_blank" rel="noopener">Let'sencrypt</a> to serve, create, and renew SSL certificates for your Appwrite server and any custom domains set for your projects.</p>
+<p>Appwrite uses <a href="https://github.com/traefik/traefik" target="_blank" rel="noopener">Traefik</a> and <a href="https://letsencrypt.org/" target="_blank" rel="noopener">Let's Encrypt</a> to serve, create, and renew SSL certificates for your Appwrite server and any custom domains set for your projects.</p>
 
 <p>Once a new SSL certificate has been created, Appwrite will renew it 60 days before its 90 days of default expiration. Auto-generation of SSL certificates is only possible for public-facing domains. When used with localhost, Appwrite will generate a <a href="https://en.wikipedia.org/wiki/Self-signed_certificate" target="_blank" rel="noopener">self-signed SSL certificate</a>.</p>
 
@@ -16,7 +16,7 @@
 
 <h2>Password Hashing</h2>
 
-<h2>Resource-level Secuirty</h2>
+<h2>Resource-level Security</h2>
 
 <h2>Abuse Protection & Rate-Limiting</h2>
 
