Fix another typo.

--- a/app/views/docs/permissions.phtml
+++ b/app/views/docs/permissions.phtml
@@ -13,7 +13,7 @@
     
     <p>An Appwrite resource can be a database collection, database document, or a storage file. Each resource has both read and write permissions to define who can access it.</p>
     
-    <p>Using the Appwirte permissions mechanism, you can share resources between users, teams, and members with different roles.</p>
+    <p>Using the Appwrite permissions mechanism, you can share resources between users, teams, and members with different roles.</p>
 </div>
 
 <h2 id="default-values"><a href="/docs/permissions#default-values">Default Values</a></h2>
