--- a/app/views/docs/debugging.phtml
+++ b/app/views/docs/debugging.phtml
@@ -34,7 +34,7 @@
 
 <h2><a href="/docs/debugging#devMode" id="devMode">Dev Mode</a></h2>
 
-<p>When moving to dev mode, your server will produce a much more verbose error messages. Instead of getting a general 500 error, you’ll be able to view the exact error that happened on the server, debug the issue further or <a href="https://github.com/appwrite/appwrite/issues/new?body=500%20Error" target="_blank" rel="noopener">report it to the Appwrite team</a>.</p>
+<p>When moving to dev mode, your server will produce much more verbose error messages. Instead of getting a general 500 error, you’ll be able to view the exact error that happened on the server, debug the issue further or <a href="https://github.com/appwrite/appwrite/issues/new?body=500%20Error" target="_blank" rel="noopener">report it to the Appwrite team</a>.</p>
 
 <p>To change your dev environment, edit your server _APP_ENV environment variable from ‘production’ to ‘development’ in your Appwrite docker-compose.yml file located in the `appwrite` directory in the location where you first installed Appwrite.</p>
 
